--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <div class="container">
         <h1>Coming Soon</h1>
-        <p>This site is under construction. Check back later!</p>
+        <p>This ZeroBench project page is under construction. Check back later!</p>
     </div>
 </body>
 </html>
