--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZeroBench</title>
     <meta name="description" content="ZeroBench: An Impossible Visual Benchmark for Contemporary Large Multimodal Models">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-SH2PPZVP1Y"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-SH2PPZVP1Y');
+    </script>
+
     <meta name="referrer" content="no-referrer-when-downgrade">
     <meta name="robots" content="all">
     <meta content="en_EN" property="og:locale">
     <meta content="website" property="og:type">
-    <meta content="https://shikun.io/projects/clarity" property="og:url">
+    <meta content="https://zerobench.github.io/" property="og:url">
     <meta content="ZeroBench" property="og:title">
     <meta content="An Impossible Visual Benchmark for Contemporary Large Multimodal Models" property="og:description">
 
