Added arXiv links

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
 </p>
 <div class="info">
     <div>
-      <a href="https://arxiv.org" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)">arXiv <i class="ai ai-arxiv"></i></a> &nbsp;&nbsp;
-      <a href="https://arxiv.org" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)">Paper <i class="fa-solid fa-book-open"></i></a> &nbsp;&nbsp;
+      <a href="https://arxiv.org/abs/2502.09696" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)">arXiv <i class="ai ai-arxiv"></i></a> &nbsp;&nbsp;
+      <a href="https://arxiv.org/pdf/2502.09696" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)">Paper <i class="fa-solid fa-book-open"></i></a> &nbsp;&nbsp;
       <a href="https://github.com/jonathan-roberts1/zerobench" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)">Code <i class="fa-solid fa-code"></i></a>  &nbsp;&nbsp;
       <a href="https://huggingface.co/datasets/jonathan-roberts1/zerobench" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)">Dataset 🤗</a>
     </div>
