Added red teaming information

--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
 
 
     <div class="container blog main first" id="blog-main">
+
+      <h1>
+        Get involved with ZeroBench!
+      </h1>
+
+      <p class='text'>
+      A key challenge in this regime of difficult questions is human verification and quality control. 
+      Despite the checks we have carried out, it is likely that errors remain in some questions. 
+      We welcome help red teaming ZeroBench to find errors in the questions. 
+      To recognise effort, we will offer co-authorship to those who find new issues. More details can be found <a href="https://docs.google.com/document/d/1qdcEDw4le9MHTQTfB8MJWWQ6723BKtPmbGqO_ckSS0U/edit?usp=sharing">here</a>.
+      </p>
+      
         <h1>
             Introduction
         </h1>
