Added Gemini 2.5 Pro results

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 <div class="container-wrapper">
     <div class="flashy-container">
-        <b>State of the art on ZeroBench <span style="color:teal;">5/5 reliability</span>: <span style="color:IndianRed;">0%</span></b><br>
+        <b>State of the art on ZeroBench <span style="color:teal;">5/5 reliability</span>: <span style="color:IndianRed;">1%</span></b><br>
         (correctly answering a question on 5/5 samplings)
     </div>
 </div>
@@ -485,13 +485,23 @@
                     </thead>
                     <tbody class="center">
 
+
+        <tr>
+          <td>Gemini 2.5 Pro 🔥</td>
+          <td><b>3.0</b></td>     <!-- pass@1 (main) -->
+          <td>5.0</td>       <!-- pass@5 (main) -->
+          <td><b>1.0</b></td>     <!-- 5/5       -->
+          <td>26.04</td>   <!-- pass@1 (sub) -->
+          <td>90</td>      <!-- n correct (sub) -->
+      </tr>
+
       <tr>
         <td>GPT 4.5 🔥</td>
-        <td><b>1.0</b></td>     <!-- pass@1 (main) -->
+        <td>1.0</td>     <!-- pass@1 (main) -->
         <td><b>7.0</b></td>       <!-- pass@5 (main) -->
         <td>0.0</td>     <!-- 5/5       -->
-        <td>-</td>   <!-- pass@1 (sub) -->
-        <td>-</td>      <!-- n correct (sub) -->
+        <td>27.01</td>   <!-- pass@1 (sub) -->
+        <td>95</td>      <!-- n correct (sub) -->
     </tr>
 
 
