Added progress plot

--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
         (correctly answering a question on 5/5 samplings)
     </div>
 </div>
+
+
+
 <!--
 <p class="abstract">
   Large Multimodal Models (LMMs) exhibit major shortfalls when interpreting images,
@@ -228,12 +231,11 @@
         </div>
     </div>
 
+    <div class="container blog main first" id="blog-main" style="margin-top:-50px;">
 
 
+        <img src="assets/figures/zb_timeline.png" style="width: 100%;">
 
-
-
-    <div class="container blog main first" id="blog-main">
       
         <h1>
             Introduction
