Updated example question text

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <div class="slider-item">
                     <img src="assets/figures/path.jpg" style="width: 100%;">
                     <p class="caption">
-                      <b>Question: </b>Several players entered the maze from the 'Start', each represented in the image by a coloured shape. Their goal is to reach the 'End' point of the maze. The shortest path is the direct route from 'Start' to 'End' that requires the fewest steps without any backtracking (avoiding any loops or dead ends). What is the ratio of (a) the product of the number of sides of each of the shapes positioned on the shortest path (incorrect players) and (b) the product of the number of sides of each of the shapes not positioned on the shortest path?
+                      <b>Question: </b>Several players entered the maze from the 'Start', each represented in the image by a coloured shape. Their goal is to reach the 'End' point of the maze. The shortest path is the direct route from 'Start' to 'End' that requires the fewest steps without any backtracking (avoiding any loops or dead ends). What is the ratio of (a) the product of the number of sides of each of the shapes positioned on the shortest path and (b) the product of the number of sides of each of the shapes not positioned on the shortest path?
                     </p>
                 </div>
                 <div class="slider-item">
