--- a/index.html
+++ b/index.html
@@ -464,8 +464,10 @@
 
         <p class="text">
 
-          Accuracy scores on the ZeroBench main questions and subquestions.<br>pass@1 and n correct are carried out using greedy decoding (temperature=0).<br>pass@5 and 5/5 reliability are based on 5 samplings at temperature=0.7 and top_p=0.95.<br>
-          <em>Note: purple columns in the table can be sorted. 🔥: Newly evaluated.</em>
+          Accuracy scores on the ZeroBench main questions and subquestions.
+          <br>pass@1 and n correct are based on 1 sampling carried out using greedy decoding (temperature=0) where possible, otherwise default parameters are used.
+          <br>pass@5 and 5/5 reliability are based on 5 samplings at temperature=0.7 and top_p=0.95.<br>
+          <em>Note: purple columns in the table can be sorted. 🔥: Evaluated since release.</em>
 
             <div class="table-wrapper">
                 <table id="sortableTable">
@@ -486,9 +488,43 @@
                         </tr>
                     </thead>
                     <tbody class="center">
-
+        <tr>
+            <td>o3 🔥</td>
+            <td><b>3.0</b></td>     <!-- pass@1 (main) -->
+            <td>-</td>       <!-- pass@5 (main) -->
+            <td><b>-</b></td>     <!-- 5/5       -->
+            <td>-</td>   <!-- pass@1 (sub) -->
+            <td>-</td>      <!-- n correct (sub) -->
+        </tr>
 
         <tr>
+          <td>o4-mini 🔥</td>
+          <td><b>2.0</b></td>     <!-- pass@1 (main) -->
+          <td>-</td>       <!-- pass@5 (main) -->
+          <td><b>-</b></td>     <!-- 5/5       -->
+          <td>-</td>   <!-- pass@1 (sub) -->
+          <td>-</td>      <!-- n correct (sub) -->
+      </tr>
+
+      <tr>
+        <td>Llama 4 Maverick 🔥</td>
+        <td><b>0.0</b></td>     <!-- pass@1 (main) -->
+        <td>-</td>       <!-- pass@5 (main) -->
+        <td><b>-</b></td>     <!-- 5/5       -->
+        <td>-</td>   <!-- pass@1 (sub) -->
+        <td>-</td>      <!-- n correct (sub) -->
+    </tr>
+
+    <tr>
+      <td>GPT-4.1 🔥</td>
+      <td><b>0.0</b></td>     <!-- pass@1 (main) -->
+      <td>-</td>       <!-- pass@5 (main) -->
+      <td><b>-</b></td>     <!-- 5/5       -->
+      <td>-</td>   <!-- pass@1 (sub) -->
+      <td>-</td>      <!-- n correct (sub) -->
+  </tr>
+
+      <tr>
           <td>Gemini 2.5 Pro 🔥</td>
           <td><b>3.0</b></td>     <!-- pass@1 (main) -->
           <td>5.0</td>       <!-- pass@5 (main) -->
@@ -502,7 +538,7 @@
         <td>1.0</td>     <!-- pass@1 (main) -->
         <td><b>7.0</b></td>       <!-- pass@5 (main) -->
         <td>0.0</td>     <!-- 5/5       -->
-        <td>27.01</td>   <!-- pass@1 (sub) -->
+        <td><b>27.01</b></td>   <!-- pass@1 (sub) -->
         <td>95</td>      <!-- n correct (sub) -->
     </tr>
 
@@ -595,7 +631,7 @@
       <td>0.0</td>
       <td>2.0</td>
       <td>0.0</td>
-      <td><b>25.50</b></td>
+      <td>25.50</td>
       <td><b>82</b></td>
     </tr>
     <tr>
