Minor table reformatting

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
         <tr>
           <td>o4-mini 🔥</td>
-          <td><b>2.0</b></td>     <!-- pass@1 (main) -->
+          <td>2.0</td>     <!-- pass@1 (main) -->
           <td>-</td>       <!-- pass@5 (main) -->
           <td><b>-</b></td>     <!-- 5/5       -->
           <td>-</td>   <!-- pass@1 (sub) -->
@@ -508,7 +508,7 @@
 
       <tr>
         <td>Llama 4 Maverick 🔥</td>
-        <td><b>0.0</b></td>     <!-- pass@1 (main) -->
+        <td>0.0</td>     <!-- pass@1 (main) -->
         <td>-</td>       <!-- pass@5 (main) -->
         <td><b>-</b></td>     <!-- 5/5       -->
         <td>-</td>   <!-- pass@1 (sub) -->
@@ -517,7 +517,7 @@
 
     <tr>
       <td>GPT-4.1 🔥</td>
-      <td><b>0.0</b></td>     <!-- pass@1 (main) -->
+      <td>0.0</td>     <!-- pass@1 (main) -->
       <td>-</td>       <!-- pass@5 (main) -->
       <td><b>-</b></td>     <!-- 5/5       -->
       <td>-</td>   <!-- pass@1 (sub) -->
