--- a/index.html
+++ b/index.html
@@ -491,37 +491,46 @@
         <tr>
             <td>o3 🔥</td>
             <td><b>3.0</b></td>     <!-- pass@1 (main) -->
-            <td>-</td>       <!-- pass@5 (main) -->
-            <td><b>-</b></td>     <!-- 5/5       -->
-            <td>-</td>   <!-- pass@1 (sub) -->
-            <td>-</td>      <!-- n correct (sub) -->
+            <td>6.0</td>       <!-- pass@5 (main) -->
+            <td><b>0.0</b></td>     <!-- 5/5       -->
+            <td>25.51</td>   <!-- pass@1 (sub) -->
+            <td>85</td>      <!-- n correct (sub) -->
         </tr>
 
         <tr>
           <td>o4-mini 🔥</td>
           <td>2.0</td>     <!-- pass@1 (main) -->
-          <td>-</td>       <!-- pass@5 (main) -->
-          <td><b>-</b></td>     <!-- 5/5       -->
-          <td>-</td>   <!-- pass@1 (sub) -->
-          <td>-</td>      <!-- n correct (sub) -->
+          <td>10.0</td>       <!-- pass@5 (main) -->
+          <td><b>0.0</b></td>     <!-- 5/5       -->
+          <td>29.05</td>   <!-- pass@1 (sub) -->
+          <td>89</td>      <!-- n correct (sub) -->
       </tr>
 
       <tr>
         <td>Llama 4 Maverick 🔥</td>
         <td>0.0</td>     <!-- pass@1 (main) -->
-        <td>-</td>       <!-- pass@5 (main) -->
-        <td><b>-</b></td>     <!-- 5/5       -->
-        <td>-</td>   <!-- pass@1 (sub) -->
-        <td>-</td>      <!-- n correct (sub) -->
+        <td>2.0</td>       <!-- pass@5 (main) -->
+        <td><b>0.0</b></td>     <!-- 5/5       -->
+        <td>23.72</td>   <!-- pass@1 (sub) -->
+        <td>80</td>      <!-- n correct (sub) -->
     </tr>
+
+    <tr>
+      <td>Llama 4 Scout 🔥</td>
+      <td>0.0</td>     <!-- pass@1 (main) -->
+      <td>2.0</td>       <!-- pass@5 (main) -->
+      <td><b>1.0</b></td>     <!-- 5/5       -->
+      <td>16.28</td>   <!-- pass@1 (sub) -->
+      <td>51</td>      <!-- n correct (sub) -->
+  </tr>
 
     <tr>
       <td>GPT-4.1 🔥</td>
       <td>0.0</td>     <!-- pass@1 (main) -->
-      <td>-</td>       <!-- pass@5 (main) -->
-      <td><b>-</b></td>     <!-- 5/5       -->
-      <td>-</td>   <!-- pass@1 (sub) -->
-      <td>-</td>      <!-- n correct (sub) -->
+      <td>3.0</td>       <!-- pass@5 (main) -->
+      <td><b>0.0</b></td>     <!-- 5/5       -->
+      <td>20.67</td>   <!-- pass@1 (sub) -->
+      <td>70</td>      <!-- n correct (sub) -->
   </tr>
 
       <tr>
@@ -532,6 +541,15 @@
           <td>26.04</td>   <!-- pass@1 (sub) -->
           <td>90</td>      <!-- n correct (sub) -->
       </tr>
+
+      <tr>
+        <td>Gemini 2.5 Flash 🔥</td>
+        <td><b>3.0</b></td>     <!-- pass@1 (main) -->
+        <td>3.0</td>       <!-- pass@5 (main) -->
+        <td><b>1.0</b></td>     <!-- 5/5       -->
+        <td>24.48</td>   <!-- pass@1 (sub) -->
+        <td>89</td>      <!-- n correct (sub) -->
+    </tr>
 
       <tr>
         <td>GPT 4.5 🔥</td>
