--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             <td>o3 🔥</td>
             <td><b>3.0</b></td>     <!-- pass@1 (main) -->
             <td>6.0</td>       <!-- pass@5 (main) -->
-            <td><b>0.0</b></td>     <!-- 5/5       -->
+            <td>0.0</td>     <!-- 5/5       -->
             <td>25.51</td>   <!-- pass@1 (sub) -->
             <td>85</td>      <!-- n correct (sub) -->
         </tr>
@@ -500,17 +500,17 @@
         <tr>
           <td>o4-mini 🔥</td>
           <td>2.0</td>     <!-- pass@1 (main) -->
-          <td>10.0</td>       <!-- pass@5 (main) -->
-          <td><b>0.0</b></td>     <!-- 5/5       -->
+          <td><b>10.0</b></td>       <!-- pass@5 (main) -->
+          <td>0.0</td>     <!-- 5/5       -->
           <td>29.05</td>   <!-- pass@1 (sub) -->
-          <td>89</td>      <!-- n correct (sub) -->
+          <td><b>89</b></td>      <!-- n correct (sub) -->
       </tr>
 
       <tr>
         <td>Llama 4 Maverick 🔥</td>
         <td>0.0</td>     <!-- pass@1 (main) -->
         <td>2.0</td>       <!-- pass@5 (main) -->
-        <td><b>0.0</b></td>     <!-- 5/5       -->
+        <td>0.0</td>     <!-- 5/5       -->
         <td>23.72</td>   <!-- pass@1 (sub) -->
         <td>80</td>      <!-- n correct (sub) -->
     </tr>
@@ -528,7 +528,7 @@
       <td>GPT-4.1 🔥</td>
       <td>0.0</td>     <!-- pass@1 (main) -->
       <td>3.0</td>       <!-- pass@5 (main) -->
-      <td><b>0.0</b></td>     <!-- 5/5       -->
+      <td>0.0</td>     <!-- 5/5       -->
       <td>20.67</td>   <!-- pass@1 (sub) -->
       <td>70</td>      <!-- n correct (sub) -->
   </tr>
@@ -554,10 +554,10 @@
       <tr>
         <td>GPT 4.5 🔥</td>
         <td>1.0</td>     <!-- pass@1 (main) -->
-        <td><b>7.0</b></td>       <!-- pass@5 (main) -->
+        <td>7.0</td>       <!-- pass@5 (main) -->
         <td>0.0</td>     <!-- 5/5       -->
-        <td><b>27.01</b></td>   <!-- pass@1 (sub) -->
-        <td>95</td>      <!-- n correct (sub) -->
+        <td>27.01</td>   <!-- pass@1 (sub) -->
+        <td><b>95</b></td>      <!-- n correct (sub) -->
     </tr>
 
 
