--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
     </div>
 
-       <div class="container blog main first" id="blog-main" style="margin-top:-100px;">
+       <div class="container blog main first" id="blog-main" style="margin-top:-50px;">
 
         <img src="assets/figures/zb_timeline.png" style="width: 100%;">
 
@@ -280,7 +280,7 @@
           <td><b>10.0</b></td>       <!-- pass@5 (main) -->
           <td>0.0</td>     <!-- 5/5       -->
           <td>29.05</td>   <!-- pass@1 (sub) -->
-          <td><b>89</b></td>      <!-- n correct (sub) -->
+          <td>89</td>      <!-- n correct (sub) -->
       </tr>
 
       <tr>
