Added additional Claude results

--- a/index.html
+++ b/index.html
@@ -316,37 +316,37 @@
     <tr>
       <td>Claude Opus 4 🔥</td>
       <td><b>1.0</b></td>     <!-- pass@1 (main) -->
-      <td>-</td>       <!-- pass@5 (main) -->
-      <td>-</td>     <!-- 5/5       -->
-      <td>-</td>   <!-- pass@1 (sub) -->
-      <td>-</td>      <!-- n correct (sub) -->
+      <td>4.0</td>       <!-- pass@5 (main) -->
+      <td>0.0</td>     <!-- 5/5       -->
+      <td>22.53</td>   <!-- pass@1 (sub) -->
+      <td>73</td>      <!-- n correct (sub) -->
   </tr>
   
   <tr>
     <td>Claude Opus 4 (thinking) 🔥</td>
     <td>4.0</td>     <!-- pass@1 (main) -->
-    <td>-</td>       <!-- pass@5 (main) -->
-    <td>-</td>     <!-- 5/5       -->
-    <td>-</td>   <!-- pass@1 (sub) -->
-    <td>-</td>      <!-- n correct (sub) -->
+    <td>5.0</td>       <!-- pass@5 (main) -->
+    <td>1.0</td>     <!-- 5/5       -->
+    <td>25.06</td>   <!-- pass@1 (sub) -->
+    <td>81</td>      <!-- n correct (sub) -->
   </tr>
 
   <tr>
     <td>Claude Sonnet 4 🔥</td>
     <td>2.0</td>     <!-- pass@1 (main) -->
-    <td>-</td>       <!-- pass@5 (main) -->
-    <td>-</td>     <!-- 5/5       -->
-    <td>-</td>   <!-- pass@1 (sub) -->
-    <td>-</td>      <!-- n correct (sub) -->
+    <td>5.0</td>       <!-- pass@5 (main) -->
+    <td>1.0</td>     <!-- 5/5       -->
+    <td>23.01</td>   <!-- pass@1 (sub) -->
+    <td>77</td>      <!-- n correct (sub) -->
 </tr>
 
 <tr>
   <td>Claude Sonnet 4 (thinking) 🔥</td>
   <td>3.0</td>     <!-- pass@1 (main) -->
-  <td>-</td>       <!-- pass@5 (main) -->
-  <td>-</td>     <!-- 5/5       -->
-  <td>-</td>   <!-- pass@1 (sub) -->
-  <td>-</td>      <!-- n correct (sub) -->
+  <td>6.0</td>       <!-- pass@5 (main) -->
+  <td>0.0</td>     <!-- 5/5       -->
+  <td>24.60</td>   <!-- pass@1 (sub) -->
+  <td>80</td>      <!-- n correct (sub) -->
 </tr>
 
 
@@ -427,17 +427,17 @@
   <tr>
     <td>Claude Sonnet 3.7 🔥</td>
     <td>1.0</td>     <!-- pass@1 (main) -->
-    <td>-</td>       <!-- pass@5 (main) -->
-    <td>-</td>     <!-- 5/5       -->
-    <td>-</td>   <!-- pass@1 (sub) -->
-    <td>-</td>      <!-- n correct (sub) -->
+    <td>2.0</td>       <!-- pass@5 (main) -->
+    <td>0.0</td>     <!-- 5/5       -->
+    <td>19.01</td>   <!-- pass@1 (sub) -->
+    <td>66</td>      <!-- n correct (sub) -->
 </tr>
 
 <tr>
   <td>Claude Sonnet 3.7 (thinking) 🔥</td>
   <td>3.0</td>     <!-- pass@1 (main) -->
-  <td>-</td>       <!-- pass@5 (main) -->
-  <td>-</td>     <!-- 5/5       -->
+  <td>2.0</td>       <!-- pass@5 (main) -->
+  <td>0.0</td>     <!-- 5/5       -->
   <td>-</td>   <!-- pass@1 (sub) -->
   <td>-</td>      <!-- n correct (sub) -->
 </tr>
