Added Claude 3.7 Thinking results

--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
   <td>3.0</td>     <!-- pass@1 (main) -->
   <td>2.0</td>       <!-- pass@5 (main) -->
   <td>0.0</td>     <!-- 5/5       -->
-  <td>-</td>   <!-- pass@1 (sub) -->
-  <td>-</td>      <!-- n correct (sub) -->
+  <td>13.21</td>   <!-- pass@1 (sub) -->
+  <td>45</td>      <!-- n correct (sub) -->
 </tr>
 
   <!-- Reasoning LMMs -->
