Added information banner for dataset update

--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
     </div>
 </div>
 
+<div class="container-wrapper">
+    <div style="background-color: rgba(255, 245, 200, 0.4); padding: 18px; border-radius: 10px; margin-top: 15px; font-size: 1rem; width: 100%; border: 2px solid rgba(255, 200, 100, 0.5); box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+        <b>📢 Dataset update:</b> ZeroBench has had a minor update (v2->v3) to improve the clarity of the question/answer text for two questions (and 3 corresponding subquestions). These changes have no impact on the current scores; the previous version (v2) is available as a separate branch on HuggingFace.
+    </div>
+</div>
+
                 </div>
 
 
